fix(style): wrap all words in article content

--- a/include/style/article.styl
+++ b/include/style/article.styl
@@ -24,10 +24,8 @@ article
             @extend .button.is-light
 
         .content
+            word-wrap: break-word
             font-size: $article-font-size
-
-            a
-                word-wrap: break-word
 
             h1
                 font-size: 1.75em
